[package]
name = "exogress-common"
description = "Exogress common code"
version = "0.0.1-beta.1"
authors = ["Exogress Team <team@exogress.com>"]
edition = "2018"
license = "Apache 2.0"

[dependencies]
anyhow = { optional = true, version = "1.0.32" }
bincode = { optional = true, version = "1.3.1" }
bs58 = { optional = true, version = "0.4" }
byteorder = { optional = true, version = "1.3.4" }
bytes = { optional = true, version = "1.0" }
clap = { optional = true, version = "2.33.3" }
dashmap = { optional = true, version = "4.0.2" }
derive_builder = { optional = true, version = "0.9.0" }
futures = { optional = true, version = "0.3" }
hashbrown = { optional = true, version = "0.9" }
headers = { optional = true, version = "0.3.2" }
hostname = { optional = true, version = "0.3.1" }
http = { optional = true, version = "0.2.1" }
http-serde = { optional = true, version = "1.0.1" }
humantime = { optional = true, version = "2.0.1" }
humantime-serde = { optional = true, version = "1.0.0" }
hyper = { optional = true, version = "0.14" }
langtag = { optional = true, git = "https://github.com/glebpom/langtag.git", branch = "master" }
jsonwebtoken = { optional = true, version = "7.2.0" }
lazy_static = { optional = true, version = "1.4.0" }
lru_time_cache = { optional = true, version = "0.11.0" }
maplit = { optional = true, version = "1.0.2" }
mime = { optional = true, version = "0.3.16" }
mime_guess = { optional = true, version = "2.0.3" }
notify = { optional = true, version = "5.0.0-pre.4" }
num_cpus = { optional = true, version = "1.0" }
parking_lot = { optional = true, version = "0.11" }
paste = { optional = true, version = "1.0" }
percent-encoding = { optional = true, version = "2.1.0" }
pin-project = { optional = true, version = "1.0" }
rand = { optional = true, version = "0.8" }
regex = { optional = true, version = "1.3.7" }
rustls = { optional = true, version = "0.19" }
rustls-native-certs = { optional = true, version = "0.5.0" }
rusty-s3 = { optional = true, version = "0.1.0" }
rw-stream-sink = { optional = true, version = "0.2.1" }
semver = { optional = true, version = "0.11.0" }
serde = { optional = true, version = "1.0.105" }
serde_json = { optional = true, version = "1.0.48" }
serde_yaml = { optional = true, version = "0.8.12" }
shadow-clone = { optional = true, version = "1.2.1" }
shellexpand = { optional = true, version = "2.0.0" }
smallvec = { optional = true, version = "1.6" }
smol_str = { optional = true, version = "0.1.17" }
stop-handle = { optional = true, version = "0.1.0" }
thiserror = { optional = true, version = "1.0.19" }
tokio = { optional = true, version = "1.0" }
tokio-rustls = { optional = true, version = "0.22" }
tokio-util = { optional = true, version = "0.6" }
tracing = { optional = true, version = "0.1" }
tracing-futures = { optional = true, version = "0.2.4" }
tracing-subscriber = { optional = true, version = "0.2" }
ulid = { optional = true, version = "0.4.0" }
url = { optional = true, version = "2.1.1" }
urlencoding = { optional = true, version = "1.1.1" }
webpki = { optional = true, version = "0.21.3" }
zstd = { optional = true, version = "0.6" }
tokio-stream = { optional = true, version = "0.1.2" }
valico = { optional = true, git = "https://github.com/agavrilov/valico.git", branch = "PR/update-dependencies" }
serde_with = { optional = true, version = "=1.6.2" }
never = { optional = true, version = "0.1.0" }
include_dir = { optional = true, version = "0.6" }
schemars = { optional = true, git = "https://github.com/glebpom/schemars.git", branch = "exogress", features = ["ulid", "smol_str", "chrono", "semver"] }

seahash = { optional = true, version = "4.1.0" }
tokio-tungstenite = { optional = true, version = "0.13" }
trust-dns-resolver = { optional = true, version = "0.20" }
warp = { optional = true, version = "0.3" }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
stop-handle = "0.1.0"
tracing-subscriber = "0.2.11"
serde_json = "1.0.60"

[features]
default = [
    "client-core",
    "client-lib",
    "common-utils",
    "config-core",
    "entities",
    "signaling",
    "tunnel",
    "ws-client",
]
client-core = [
    "anyhow",
    "bincode",
    "byteorder",
    "bytes",
    "common-utils",
    "config-core",
    "dashmap",
    "derive_builder",
    "entities",
    "futures",
    "hashbrown",
    "headers",
    "hostname",
    "http",
    "hyper",
    "lazy_static",
    "mime_guess",
    "notify",
    "parking_lot",
    "percent-encoding",
    "pin-project",
    "rand",
    "rustls-native-certs",
    "rw-stream-sink",
    "serde",
    "serde/derive",
    "serde_json",
    "serde_yaml",
    "shadow-clone",
    "shellexpand",
    "signaling",
    "smallvec",
    "smol_str",
    "thiserror",
    "tokio",
    "tokio-rustls",
    "tokio-tungstenite",
    "tokio-util",
    "tokio-util/compat",
    "tokio/fs",
    "tokio/net",
    "tokio/time",
    "tracing",
    "tracing-futures",
    "trust-dns-resolver",
    "tunnel",
    "url",
    "urlencoding",
    "warp",
    "webpki",
    "ws-client"
]
client-lib = [
    "anyhow",
    "client-core",
    "entities",
    "futures",
    "shadow-clone",
    "tokio",
    "tokio/macros",
    "tokio/process",
    "tokio/rt-multi-thread",
    "tracing-subscriber",
    "trust-dns-resolver",
    "tunnel",
]
common-utils = [
    "bs58",
    "clap",
    "entities",
    "futures",
    "hostname",
    "http",
    "jsonwebtoken",
    "lazy_static",
    "num_cpus",
    "pin-project",
    "rand",
    "rustls",
    "rustls-native-certs",
    "serde",
    "serde/derive",
    "stop-handle",
    "thiserror",
    "tokio",
    "tokio-rustls",
    "tokio-tungstenite",
    "tokio-util",
    "tokio/net",
    "tokio/signal",
    "tokio/time",
    "tracing",
    "tracing-subscriber",
    "trust-dns-resolver",
    "url",
    "webpki",
]
config-core = [
    "anyhow",
    "bytes",
    "entities",
    "hashbrown",
    "hashbrown/serde",
    "http",
    "http-serde",
    "humantime",
    "humantime-serde",
    "include_dir",
    "langtag",
    "langtag/serde",
    "lazy_static",
    "maplit",
    "mime",
    "never",
    "percent-encoding",
    "regex",
    "rusty-s3",
    "schemars",
    "seahash",
    "semver",
    "semver/serde",
    "serde",
    "serde/derive",
    "serde_json",
    "serde_with",
    "serde_yaml",
    "smol_str",
    "smol_str/serde",
    "thiserror",
    "tracing",
    "url",
    "url/serde",
    "valico",
]
entities = [
    "bytes",
    "paste",
    "schemars",
    "serde",
    "serde/derive",
    "shadow-clone",
    "smol_str",
    "smol_str/serde",
    "thiserror",
    "tracing",
    "ulid",
    "ulid/serde",
]
signaling = [
    "config-core",
    "entities",
    "hashbrown",
    "http",
    "http-serde",
    "serde",
    "serde/derive",
]
tunnel = [
    "bincode",
    "bytes",
    "config-core",
    "entities",
    "futures",
    "hashbrown",
    "hyper",
    "lazy_static",
    "lru_time_cache",
    "parking_lot",
    "rand",
    "rw-stream-sink",
    "serde",
    "serde/derive",
    "shadow-clone",
    "stop-handle",
    "thiserror",
    "tokio",
    "tokio-stream",
    "tokio-util",
    "tokio-util/codec",
    "tokio-util/compat",
    "tokio/io-util",
    "tokio/macros",
    "tokio/net",
    "tokio/sync",
    "tokio/time",
    "tracing",
    "trust-dns-resolver",
    "ulid",
    "ulid/serde",
    "url",
    "zstd",
]
ws-client = [
    "rustls",
    "rustls-native-certs",
    "tokio-rustls",
    "tokio-tungstenite",
    "tokio-util",
    "trust-dns-resolver",
    "url",
    "webpki",
]

[workspace]
members = [
    ".",
    "./config-schemas"
]
