[package]
name = "exogress"
version = "0.1.0"
authors = ["Exogress Team <team@exogress.com>"]
edition = "2018"
license = "Apache 2.0"

[dependencies]
clap = "3.0.0-beta.1"
url = "2.1.1"
daemonize = "0.4.1"
tokio = { version = "0.2.21", features = ["macros", "rt-threaded", "process"] }
futures = "0.3.5"
trust-dns-resolver = "0.19.5"
shadow-clone = "1.2.1"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2.4"
stop-handle = "0.1"

exogress-client-core = { version = "0.1", path = "../client-core" }
exogress-tunnel = { version = "0.1", path = "../tunnel" }
exogress-config-core = { version = "0.1", path = "../config-core" }
exogress-entities = { path = "../entities", version = "0.1" }
exogress-common-utils = { path = "../common-utils", version = "0.1" }
