[package]
name = "exogress-client-core"
version = "0.1.0"
authors = ["Exogress Team <team@exogress.com>"]
edition = "2018"
license = "Apache 2.0"

[dependencies]
tokio = { version = "0.2.21", features = ["tcp", "time", "fs"] }
futures = "0.3.5"
tokio-tungstenite = { version = "0.11" }
serde_yaml = "0.8.12"
url = "2.1.1"
serde_json = "1.0.48"
serde = { version = "1.0.105", features = ["derive"] }
thiserror = "1.0.13"
derive_builder = "0.9.0"
trust-dns-resolver = "0.19.5"
rand = { version = "0.7", features = ["small_rng"] }
pin-project = "0.4"
http = "0.2"
tungstenite = { version = "0.11", default-features = false }
notify = { version = "5.0.0-pre.3" }
hostname = "0.3.1"
serde_with = "1.4.0"
byteorder = "1.3.4"
smartstring = { version  = "0.2.3", features = ["serde"] }
anyhow = "1.0.31"
bincode = "1.3.1"
shadow-clone = "1.2.1"
tracing = "0.1"
tracing-futures = "0.2.4"
hashbrown = "0.9"
smallvec = "1.4.1"
shellexpand = "2.0.0"
parking_lot = "0.11.0"
tokio-rustls = "0.14.0"
webpki = "0.21.3"
rustls-native-certs = "0.4.0"
bs58 = "0.3.1"
jsonwebtoken = "7.2.0"
pem = "0.8.1"
warp = "0.2.4"
rw-stream-sink = "0.2.1"
bytes = "0.5"
tokio-util = { version = "0.3.1", features = ["compat"] }
urlencoding = "1.1.1"
mime_guess = "2.0.3"

exogress-common-utils = { path = "../common-utils", version = "0.1" }
exogress-config-core = { path = "../config-core", version = "0.1" }
exogress-tunnel = { path = "../tunnel", version = "0.1" }
exogress-entities = { path = "../entities", version = "0.1" }
exogress-signaling = { path = "../signaling", version = "0.1" }

[dev-dependencies]
tokio = { version = "0.2.21", features = ["macros"] }
stop-handle = "0.1.0"
tracing-subscriber = "0.2.11"
