[package]
name = "exogress-client-jni"
version = "0.1.0"
authors = ["Exogress Team <team@exogress.com>"]
edition = "2018"

[dependencies]
jni = "0.17.0"
exogress-client-lib = { path =  "../client-lib", version = "0.1" }
exogress-entities = { path =  "../entities", version = "0.1" }
shadow-clone = "1.2.1"

[lib]
crate_type = ["cdylib"]