[package]
name = "exogress-client-lib"
version = "0.1.0"
authors = ["Exogress Team <team@exogress.com>"]
edition = "2018"
license = "Apache 2.0"

[dependencies]
tokio = { version = "0.2.21", features = ["macros", "rt-threaded", "process"] }
futures = "0.3.5"
trust-dns-resolver = "0.19.5"
shadow-clone = "1.2.1"
tracing-subscriber = "0.2"

exogress-client-core = { version = "0.1", path = "../client-core" }
exogress-tunnel = { version = "0.1", path = "../tunnel" }
exogress-entities = { path =  "../entities", version = "0.1" }
