[package]
name = "exogress-client-node"
version = "0.1.0"
authors = ["Exogress Team <team@exogress.com>"]
edition = "2018"
license = "Apache 2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
node-bindgen = { version = "2.1" }
exogress-client-lib = { path =  "../client-lib", version = "0.1" }
shadow-clone = "1.2.1"

[build-dependencies]
node-bindgen = { version = "2.1", features = ["build"] }
