[package]
name = "exogress-common-utils"
version = "0.1.0"
authors = ["Exogress Team <team@exogress.com>"]
edition = "2018"
license = "Apache 2.0"

[dependencies]
clap = "3.0.0-beta.1"
hostname = "0.3.1"
lazy_static = "1.4.0"
stop-handle = "0.1"
futures = "0.3.5"
tokio = { version = "0.2", features = ["signal", "time", "net"] }
num_cpus = "1.0"
clap_generate = "3.0.0-beta.1"
tracing = "0.1"
tracing-subscriber = "0.2"
rand = { version = "0.7", features = ["small_rng"] }
pin-project = "0.4"
trust-dns-resolver = "0.19.5"
tungstenite = { version = "0.11", default-features = false }
tokio-rustls = "0.14.0"
rustls = "0.18.1"
url = "2.1.1"
webpki = "0.21.3"
rustls-native-certs = "0.4.0"
thiserror = "1.0.20"
tokio-tungstenite = "0.11.0"
tokio-either = "0.1.4"

[dev-dependencies]
tokio = { version = "0.2", features = ["macros", "rt-threaded", "rt-core"] }
