[package]
name = "exogress-common-utils"
version = "0.1.0"
authors = ["Exogress Team <team@exogress.com>"]
edition = "2018"
license = "Apache 2.0"

[dependencies]
clap = "2.33.3"
hostname = "0.3.1"
lazy_static = "1.4.0"
stop-handle = "0.1"
futures = "0.3.5"
tokio = { version = "0.2", features = ["signal", "time", "net"] }
num_cpus = "1.0"
tracing = "0.1"
tracing-subscriber = "0.2"
rand = { version = "0.7", features = ["small_rng"] }
pin-project = "0.4"
jsonwebtoken = "7.2.0"
thiserror = "1.0.20"
bs58 = "0.3.1"
serde = { version = "1.0.105", features = ["derive"] }

url = { version = "2.1.1", optional = true }
trust-dns-resolver = { version = "0.19.5", optional = true }
tungstenite = { version = "0.11", default-features = false, optional = true }
webpki = { version = "0.21.3", optional = true }
tokio-rustls = { version = "0.14.0", optional = true }
rustls = { version = "0.18.1", optional = true }
rustls-native-certs = { version = "0.4.0", optional = true }
tokio-tungstenite = { version = "0.11.0", optional = true }
tokio-either = { version = "0.1.4", optional = true }

exogress-entities = { path =  "../entities", version = "0.1" }

[dev-dependencies]
tokio = { version = "0.2", features = ["macros", "rt-threaded", "rt-core"] }

[features]
ws = ["webpki", "tokio-rustls", "rustls", "rustls-native-certs", "tokio-tungstenite", "tokio-either", "tungstenite", "trust-dns-resolver", "url"]
default = ["ws"]
