[package]
name = "exogress-config-core"
version = "0.1.0"
authors = ["Exogress Team <team@exogress.com>"]
edition = "2018"
license = "Apache 2.0"

[dependencies]
serde_yaml = "0.8.12"
url = { version = "2.1.1", features = ["serde"] }
serde = { version = "1.0.105", features = ["derive"] }
thiserror = "1.0.13"
percent-encoding = "2.1.0"
regex = "1.3.7"
humantime-serde = "1.0.0"
semver = { version = "0.10.0", features = ["serde"] }
http-serde = "1.0.1"
http = "0.2.1"
bytes = "0.5"
exogress-entities = { version = "0.1", path = "../entities" }
hashbrown = { version = "0.9", features = ["serde"] }
tracing = "0.1"
#seahash = "4.0.1"
seahash = { git = "https://gitlab.redox-os.org/redox-os/seahash.git" }

lazy_static = "1.4.0"
maplit = "1.0.2"
smol_str = { version = "0.1.17", features = ["serde"] }
