[package]
name = "exogress-entities"
version = "0.1.0"
authors = ["Exogress Team <team@exogress.com>"]
edition = "2018"
license = "Apache 2.0"

[dependencies]
thiserror = "1.0.19"
ulid = { version = "0.4.0", features = ["serde"] }
serde = { version = "1.0.105", features = ["derive"] }
rand = "0.7"
smartstring = { version  = "0.2.3", features = ["serde"] }
bytes = "0.5"
paste = "1.0"
shadow-clone = "1.2.1"
tracing = "0.1"

[dev-dependencies]
serde_json = "1.0.56"
