[package]
name = "exogress-signaling"
version = "0.1.0"
authors = ["Exogress Team <team@exogress.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.105", features = ["derive"] }
hashbrown = "0.9.1"
http = "0.2.1"
http-serde = "1.0.1"

exogress-entities = { path =  "../entities", version = "0.1" }
exogress-config-core = { path =  "../config-core", version = "0.1" }
