[package]
name = "exogress-tunnel"
version = "0.1.0"
authors = ["Exogress Team <team@exogress.com>"]
edition = "2018"
license = "Apache 2.0"

[dependencies]
tokio = { version = "0.2", features = ["rt-core", "tcp", "sync", "io-util", "time", "macros"] }
tokio-util = { version = "0.3.1", features = ["codec", "compat"] }
tokio-rustls = "0.14"
futures = "0.3"
bytes = "0.5"
thiserror = "1.0.19"
hashbrown = "0.9"
parking_lot = "0.11"
stop-handle = "0.1.0"
rw-stream-sink = "0.2.1"
hyper = "0.13.6"
tower = "0.3.1"
ulid = { version = "0.4.0", features = ["serde"] }
serde = { version = "1.0.105", features = ["derive"] }
rand = "0.7"
exogress-config-core = { path = "../config-core", version = "0.1" }
exogress-entities = { path = "../entities", version = "0.1" }
bincode = "1.3.1"
shadow-clone = "1.2.1"
tracing = "0.1"
trust-dns-resolver = "0.19.5"
url = "2.1.1"
lru_time_cache = "0.11.0"
tracing-subscriber = "0.2"
zstd = "0.5.3"

# will be used for id reuse
#slot_generator = "0.1.0"
